# ANMS-Codes

./: CMakeLists.txt
CmakeProject/: anmsConfig.cmake.in  package.xml
CmakeProject/include/anms/: anms.h
CmakeProject/src/: main.cpp
